--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open --color --bonjour --history-api-fallback --progress --content-base",
+    "start": "webpack-dev-server --open --color --bonjour --history-api-fallback --progress --content-base ",
     "build": "webpack"
   },
   "author": "",
@@ -23,11 +23,13 @@
     "css-loader": "^0.28.5",
     "eslint": "^4.6.0",
     "eslint-plugin-react": "^7.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.5.5",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.7.1"
